# Run-Google-Tests-for-Your-Cpp-Projects

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp-clang.yml  c-cpp.yml
lib/: product.h
src/: main.cpp  product.cpp
src/multiply/: multiply.cpp  multiplynotest.cpp
tests/: utest-product.cpp  utest_multiply.cpp
